tests/code_samples/invalid/right_miss.t
(S0, 1):  (1 R halt)
(S0, 0):  (1 R S1)